# child-mind-institute-detect-sleep-states

./: .gitignore  .gitmodules  README.md  init.sh  pyproject.toml  requierements_for_cuda.txt  upload_llm_se_python_wheel.sh
child_mind_institute_detect_sleep_states/: pj_struct_paths.py  typing.py
child_mind_institute_detect_sleep_states/common/: get_nan_rate.py  split_unlabeled_intervals.py
child_mind_institute_detect_sleep_states/data/: __init__.py  comp_dataset.py  dataset.py  filter.py  train.py
child_mind_institute_detect_sleep_states/model/: callbacks.py  loggers.py
child_mind_institute_detect_sleep_states/model/dataset/: dataset.py  features.py
child_mind_institute_detect_sleep_states/model/multi_res_bi_gru/: __init__.py  config.py  lightning_module.py  model.py
child_mind_institute_detect_sleep_states/model/multi_res_bi_lstm/: __init__.py  config.py  lightning_module.py  model.py
child_mind_institute_detect_sleep_states/model/multi_res_bi_lstm_attention/: model.py
child_mind_institute_detect_sleep_states/model/sleep_stage_classification/: __init__.py  config.py  dataset.py  lightning_module.py  model.py
child_mind_institute_detect_sleep_states/model/vit_gru/: model.py  transformer_gru.py
child_mind_institute_detect_sleep_states/score/: __init__.py  event_detection_ap.py  fast_event_detection_ap.py
data/: repeat_rate.json
lib/kaggle-child-mind-institute-detect-sleep-states/: .gitignore  README.md  create_repo_dataset.py  download_model_from_gcp_bucket.sh  run.sh  upload_model_to_gcp_bucket.sh  validate.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/: blending.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/augmentation/: cutmix.py  mixup.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/blending/: __init__.py  optuna_blending.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/config/: __init__.py  dir.py  prepare_data.py  stacking.py  train.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/data/: utils.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/datamodule/: seg.py  stacking.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/modelmodule/: base_chunk.py  seg.py  stacking.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/models/: EncoderDecoder.py  common.py  spec1D.py  spec2Dcnn.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/submission/: inference.py  test.py  train.py
lib/kaggle-child-mind-institute-detect-sleep-states/cmi_dss_lib/utils/: common.py  get_repeat_rate.py  hydra.py  inference.py  load_predicted.py  metrics.py  post_process.py  visualize.py
lib/kaggle-child-mind-institute-detect-sleep-states/config/base/: train.yaml
lib/kaggle-child-mind-institute-detect-sleep-states/config/exp/: 100.yaml  101.yaml  102.yaml  103.yaml  104.yaml  105.yaml  106.yaml  107.yaml  108.yaml  109.yaml  110.yaml  111.yaml  16.yaml  18.yaml  (+61 more)
lib/kaggle-child-mind-institute-detect-sleep-states/notebook/: eda001.ipynb  eda002.ipynb  eda003.ipynb  eda004.ipynb  eda006.ipynb  eda007.ipynb  eda_features.ipynb
lib/kaggle-child-mind-institute-detect-sleep-states/run/: anl_start_timing_for_each_series_id.py  blending.py  calc_cv.py  calc_cv_with_overlapping.py  combine_onset_wakeup.py  compute_corr_for_blending.py  create_k_fold_yaml.py  create_model_dataset.py  download_predicted_from_gcp_bucket.sh  inference.py  optimize_post_process.py  prepare_data.py  prepare_dev.py  prepare_psuedo.py  prepare_psuedo_label.py  test_postprocess.py  train.py  train_stacking.py  upload_predicted_to_gcp_bucket.sh
lib/kaggle-child-mind-institute-detect-sleep-states/submission_test/: inference.ipynb
lib/kaggle-child-mind-institute-detect-sleep-states/tools/: eda_plot.py
lib/times-net/: model.py
lib/times-net/timesnet/: model.py
src/: calc_repeat_rate.py  create_dataset.py  create_dataset_with_partid.py  create_dataset_with_soft_labeling.py  create_k_fold_datasets.py  create_k_fold_indices.py  create_stratified_k_fold_datasets.py  predict.py  train.py  upload_dataset.py
src/config/: multi_res_bi_gru.toml  multi_res_bi_lstm.toml  sleep_stage_classification.toml
src/test/: test_dataset.py  test_module.py
(+149 files in other folders)
