[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "child-mind-institute-detect-sleep-states"
description = "Package"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.0.1"
dependencies = [
    "lightning~=2.1.0",
    "numpy_utility@git+https://github.com/yomura-yomura/numpy_utility#egg=88e5bea"
]

[project.optional-dependencies]
dev = [
    "build~=1.0.3",

    "pandas~=2.1.1",
    "pyarrow~=13.0.0",
    "fastparquet~=2023.8.0",
    "scikit-learn~=1.3.1",
    "wandb~=0.15.12",
    "toml~=0.10.2"
]
pycharm = [
#    "plotly_utility@git+https://github.com/yomura-yomura/plotly_utility#egg=65afd14",
    "kaleido ~= 0.2.1"
]

[tool.setuptools.packages.find]
exclude = ["data", "build", "dist", "src", "meta"]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
line_length = 120
profile = "black"

[tool.black]
line-length = 120

[tool.mypy]
show_error_context = true
strict = true
show_column_numbers = true
namespace_packages = true
disallow_subclassing_any = false
disallow_untyped_decorators = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
follow_imports = "silent"
exclude = []
